--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {{ range .CSS }}
+    <link rel="stylesheet" href="{{ . }}">
+  {{ end }}
+  {{ range .JS }}
+    <script src="{{ . }}" defer></script>
+  {{ end }}
   <title>{{ .Title }}</title>
 </head>
 {{ template "nav" . }}
-{{ template "body" . }}
+{{ .Body }}
 </html>
